# OS

./: .gitignore  README.md  main.cpp  readme.md
.history/: README_20251214012352.md
.history/server/: CMakeLists_20251214010558.txt  readme_20251214012416.md  readme_20251214013849.md  readme_20251214014134.md  readme_20251214014153.md
.history/server/test/: test_client_20251214010610.py
client/: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
client/doc/: IMPLEMENTATION_SUMMARY.md  USAGE.md
client/include/cli/: CLIInterface.h
client/include/network/: NetworkClient.h
client/include/protocol/: CommandBuilder.h  ResponseParser.h
client/include/session/: SessionManager.h
client/src/cli/: CLIInterface.cpp
client/src/network/: NetworkClient.cpp
client/src/protocol/: CommandBuilder.cpp  ResponseParser.cpp
client/src/session/: SessionManager.cpp
client/test/: test_commands.txt
filesystem/: README.md
filesystem/doc/: 原子操作修复总结.md
filesystem/include/: block_cache.h  disk.h  inode.h  path.h
filesystem/scripts/: mkfs.cpp  snapshot_tool.cpp
filesystem/src/: block_cache.cpp  directory.cpp  disk.cpp  inode.cpp  makefile  path.cpp
filesystem/test/: test_block_cache.cpp  test_filesystem.cpp  test_snapshot.cpp
server/: CMakeLists.txt  main.cpp  note.txt  readme.md
server/include/auth/: Authenticator.h  PermissionChecker.h
server/include/business/: BackupFlow.h  ReviewFlow.h
server/include/cache/: CacheStatsProvider.h  LRUCache.h
server/test/: Untitled  test_client.py  test_concurrent.py  test_fs_adapter.cpp  ultimate_test.py
(+38 files in other folders)
